--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1054,6 +1054,8 @@ a {
   }
 }
 .cid-tzPkDa6SjJ {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background-color: #001119;
 }
 .cid-tzPkDa6SjJ .mbr-fallback-image.disabled {
