--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1365,6 +1365,56 @@ a {
   text-align: left;
   color: #232323;
 }
+.cid-tA7sBkXx0V {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: #001119;
+}
+.cid-tA7sBkXx0V .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tA7sBkXx0V .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tA7sBkXx0V .card-box {
+  z-index: 10;
+  position: relative;
+}
+@media (min-width: 1500px) {
+  .cid-tA7sBkXx0V .container {
+    max-width: 1400px;
+  }
+}
+.cid-tA7sBkXx0V .card {
+  margin: auto;
+}
+.cid-tA7sBkXx0V .mbr-iconfont {
+  display: block;
+  font-size: 5rem;
+  color: #6592e6;
+  margin-bottom: 2rem;
+}
+.cid-tA7sBkXx0V .card-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cid-tA7sBkXx0V .row {
+  justify-content: center;
+}
+.cid-tA7sBkXx0V H3 {
+  color: #fcffff;
+}
+.cid-tA7sBkXx0V .card-title,
+.cid-tA7sBkXx0V .card-box {
+  color: #fcffff;
+}
 .cid-tzPUDadthm {
   padding-top: 75px;
   padding-bottom: 75px;
@@ -2093,6 +2143,118 @@ a {
 .cid-tzQizb4tt9 H4 {
   color: #bbbbbb;
 }
+.cid-tA7sET3UZ9 {
+  padding-top: 10rem;
+  padding-bottom: 6rem;
+  background-color: #001119;
+}
+.cid-tA7sET3UZ9 img,
+.cid-tA7sET3UZ9 .item-img {
+  width: 100%;
+  height: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+.cid-tA7sET3UZ9 .item:focus,
+.cid-tA7sET3UZ9 span:focus {
+  outline: none;
+}
+.cid-tA7sET3UZ9 .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-tA7sET3UZ9 .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #232323;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tA7sET3UZ9 .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-tA7sET3UZ9 .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tA7sET3UZ9 .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-tA7sET3UZ9 .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-tA7sET3UZ9 .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tA7sET3UZ9 .mbr-section-title {
+  color: #232323;
+}
+.cid-tA7sET3UZ9 .mbr-text,
+.cid-tA7sET3UZ9 .mbr-section-btn {
+  text-align: left;
+}
+.cid-tA7sET3UZ9 .item-title {
+  text-align: left;
+  color: #fcffff;
+}
+.cid-tA7sET3UZ9 .item-subtitle {
+  text-align: left;
+  color: #232323;
+}
+.cid-tA7sFmTDR5 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: #001119;
+}
+.cid-tA7sFmTDR5 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tA7sFmTDR5 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tA7sFmTDR5 .card-box {
+  z-index: 10;
+  position: relative;
+}
+@media (min-width: 1500px) {
+  .cid-tA7sFmTDR5 .container {
+    max-width: 1400px;
+  }
+}
+.cid-tA7sFmTDR5 .card {
+  margin: auto;
+}
+.cid-tA7sFmTDR5 .mbr-iconfont {
+  display: block;
+  font-size: 5rem;
+  color: #6592e6;
+  margin-bottom: 2rem;
+}
+.cid-tA7sFmTDR5 .card-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cid-tA7sFmTDR5 .row {
+  justify-content: center;
+}
+.cid-tA7sFmTDR5 H3 {
+  color: #fcffff;
+}
+.cid-tA7sFmTDR5 .card-title,
+.cid-tA7sFmTDR5 .card-box {
+  color: #fcffff;
+}
 .cid-tzPUDadthm {
   padding-top: 75px;
   padding-bottom: 75px;
@@ -2535,15 +2697,15 @@ a {
     left: -1rem;
   }
 }
-.cid-tA788DWpRG {
+.cid-tA7qVZryMN {
   padding-top: 10rem;
   padding-bottom: 10rem;
-  background-image: url("../../../assets/images/trenner-900x553.webp");
+  background-image: url("../../../assets/images/261019-bandfoto-crop-u7447-8-900x625.webp");
 }
-.cid-tA788DWpRG .mbr-fallback-image.disabled {
+.cid-tA7qVZryMN .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tA788DWpRG .mbr-fallback-image {
+.cid-tA7qVZryMN .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -2551,9 +2713,6 @@ a {
   height: 100%;
   position: absolute;
   top: 0;
-}
-.cid-tA788DWpRG .mbr-section-title {
-  color: #ffffff;
 }
 .cid-tA78lqnfej {
   padding-top: 5rem;
